Added game id to path in join game
