# src/main/java/com/mauriciotogneri/momowars/controllers/player/JoinGame.java
@@ -1,26 +1,19 @@
 package com.mauriciotogneri.momowars.controllers.player;
 
-import com.mauriciotogneri.jerry.controller.EntityProvider;
-import com.mauriciotogneri.jerry.controller.EntityProvider.EntityObject;
 import com.mauriciotogneri.momowars.exceptions.GameFinishedException;
-import com.mauriciotogneri.momowars.exceptions.GameNotFoundException;
 import com.mauriciotogneri.momowars.exceptions.GamePlayingException;
-import com.mauriciotogneri.momowars.exceptions.InvalidParametersException;
 import com.mauriciotogneri.momowars.exceptions.PlayerAlreadyJoinedException;
 import com.mauriciotogneri.momowars.model.Account;
 import com.mauriciotogneri.momowars.model.Game;
 import com.mauriciotogneri.momowars.server.BaseController;
 
-import java.util.Objects;
-
-import javax.ws.rs.Consumes;
 import javax.ws.rs.HeaderParam;
 import javax.ws.rs.POST;
 import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
-import javax.ws.rs.ext.Provider;
 
 import static javax.ws.rs.core.Response.Status.CREATED;
 
@@ -28,71 +21,45 @@ import static javax.ws.rs.core.Response.Status.CREATED;
 public class JoinGame extends BaseController
 {
     @POST
-    @Path("v1/players")
+    @Path("v1/games/{gameId}/players")
     @Produces(MediaType.APPLICATION_JSON)
     public Response controller(@HeaderParam(HEADER_SESSION_TOKEN) String sessionToken,
-                               Entity entity) throws Exception
+                               @PathParam(PARAM_GAME_ID) Long gameId) throws Exception
     {
-        return process(() -> response(sessionToken, entity));
+        return process(() -> response(sessionToken, gameId));
     }
 
-    private Response response(String sessionToken, Entity entity) throws Exception
+    private Response response(String sessionToken, Long gameId) throws Exception
     {
         checkIfNotEmpty(sessionToken);
-        checkIfNotEmpty(entity);
 
         Account account = validateSessionToken(sessionToken);
 
-        if (account.hasGame(entity.gameId))
+        if (account.hasGame(gameId))
         {
             throw new PlayerAlreadyJoinedException();
         }
 
-        try
+        Game loadedGame = gameService.getGame(gameId, account.id());
+
+        if (loadedGame.isPlaying())
         {
-            Game loadedGame = gameService.getGame(entity.gameId, account.id());
-
-            if (loadedGame.isPlaying())
-            {
-                throw new GamePlayingException();
-            }
-            else if (loadedGame.isFinished())
-            {
-                throw new GameFinishedException();
-            }
-
-            playerService.create(account.id(), loadedGame.id());
-
-            if (loadedGame.playersMissing() == 1)
-            {
-                gameService.startGame(loadedGame.id());
-            }
-
-            Game game = gameService.getGame(loadedGame.id(), account.id());
-
-            return response(CREATED, game);
+            throw new GamePlayingException();
         }
-        catch (GameNotFoundException e)
+        else if (loadedGame.isFinished())
         {
-            throw new InvalidParametersException(e);
-        }
-    }
-
-    @Provider
-    @Consumes(MediaType.APPLICATION_JSON)
-    public static class Entity extends EntityProvider<Entity> implements EntityObject
-    {
-        private Long gameId;
-
-        public Entity()
-        {
-            super(Entity.class);
+            throw new GameFinishedException();
         }
 
-        @Override
-        public boolean isValid()
+        playerService.create(account.id(), loadedGame.id());
+
+        if (loadedGame.playersMissing() == 1)
         {
-            return Objects.nonNull(gameId);
+            gameService.startGame(loadedGame.id());
         }
+
+        Game game = gameService.getGame(loadedGame.id(), account.id());
+
+        return response(CREATED, game);
     }
 }
